force-app/main/default/objects/PDRI__Comparison_Result__c/PDRI__Comparison_Result__c.object-meta.xml
<CustomObject>
    <label>Comparison Result</label>
    <nameField>
        <displayFormat>CR-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comparison Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>