force-app/main/default/objects/PDRI__Comparison_Result__c/fields/PDRI__Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Completion_Date_Time__c</fullName>
    <label>Completion Date Time</label>
    <type>DateTime</type>
</CustomField>