force-app/main/default/objects/PDRI__Comparison_Result__c/fields/PDRI__Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Duration_Minutes__c</fullName>
    <formula>PDRI__Duration_Seconds__c / 60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>