force-app/main/default/objects/PDRI__Comparison_Result__c/fields/PDRI__Duration_Seconds__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Duration_Seconds__c</fullName>
    <formula>(PDRI__Completion_Date_Time__c - PDRI__Start_Date_Time__c)*1440*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>