force-app/main/default/objects/PDRI__Comparison_Result__c/fields/PDRI__Metadata_Error__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Metadata_Error__c</fullName>
    <label>Metadata Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>