force-app/main/default/objects/PDRI__Comparison_Result__c/fields/PDRI__Result__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>