force-app/main/default/objects/PDRI__Comparison_Result__c/fields/PDRI__Status__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Finished</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Queued</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>